# CIS2107-LabAssignments

./: .gitignore  CMakeLists.txt
Assignment 1 - Warmup/: ArrayPractice.c  CMakeLists.txt
Assignment 1 Warmup/: ArrayPractice.c  CMakeLists.txt
Assignment 2 - Decommenter/: Decommenter.c  TATestFile.txt
Assignment 2 Decommenter/: CMakeLists.txt  Decommenter.c  TATestFileError.txt  TestFile.txt
Assignment 3 - A Few Practice Problems/: Assignment 3.docx
Assignment 4 - Practicing with Bit Operators/: CMakeLists.txt  Calculator  Calculator.c
Assignment 5 - A Short Debugging Exercise/: Exercises.docx  blowfish.c
Assignment 6 - String Library/: CMakeLists.txt  string_driver.c
Assignment 6 - String Library/include/: personal_string.h
Assignment 6 - String Library/lib/: all_letters.c  capitalize.c  dedup.c  diff_TODO.c  ends_with_ignore_case.c  find.c  is_empty.c  len_diff.c  num_in_range.c  pad.c  ptr_to.c  repeat.c  rm_empties.c  rm_left_space.c  rm_right_space.c  rm_space.c  shorten.c  str_chop_all.c  str_connect.c  str_len.c  str_zip.c  strcmp_ign_case.c  strcmp_ign_case_TODO.c  take_last.c
Class Assignments/: CMakeLists.txt  Test.c
Test/: CMakeLists.txt  Test.c
